--- a/src/app/components/card-box/card-box.component.html
+++ b/src/app/components/card-box/card-box.component.html
@@ -14,12 +14,12 @@
 	</div>
 
 	<div class="card-footer">
-		<p>Olá, fulano</p>
-		<p>Ag 999</p>
-		<p>Cc 999-99</p>
+		<p>{{accountData.name}}</p>
+		<p>AG {{accountData.account.agency}}</p>
+		<p>CC {{accountData.account.number}}</p>
 	</div>
 
 	<div class="card-limit">
-		<p>Limit: 1000</p>
+		<p>Limit: {{accountData.card.limit}}</p>
 	</div>
 </div>
