add carousel item

--- a/src/app/components/card-box/card-box.component.html
+++ b/src/app/components/card-box/card-box.component.html
@@ -15,8 +15,8 @@
 
 	<div class="card-footer">
 		<p>{{accountData.name}}</p>
-		<p>AG {{accountData.account.agency}}</p>
-		<p>CC {{accountData.account.number}}</p>
+		<p>Ag {{accountData.account.agency}}</p>
+		<p>Cc {{accountData.account.number}}</p>
 	</div>
 
 	<div class="card-limit">
