--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -21,19 +21,20 @@ header{
   border-radius: 4px;
 
   display: flex;
-  justify-content: flex-start;
+  justify-content: right;
   align-items: center;
 }
 .search-box-text{
   display: flex;
-  justify-content: center;
+  justify-content: right;
   align-items: center;
+  padding: 5px;
 }
 .search-box-input{
-  width: 680px;
+  width: 711px;
   height: 44px;
   font-size: 14px;
-  padding-left: 30px;
+  padding: 5px;
   outline: none;
   background-color: transparent;
   z-index: 3;
